--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "expense_tracker",
-    "short_name": "expense_tracker",
+    "name": "Finenzo",
+    "short_name": "Finenzo",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#FFFFFF",
+    "theme_color": "#673AB7",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
