--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,8 @@ dependencies:
   permission_handler: ^11.3.0
   
   # SMS & Notifications
-  flutter_sms_inbox: ^1.0.3
   flutter_local_notifications: ^17.0.0
+  telephony: ^0.2.0
 
 dev_dependencies:
   flutter_test:
